Added all deps, routes, controllers, models and required stuff

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "netpri_me",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "videojs-contrib-hls": "^5.15.0"
   }
 }
