--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
+    "clipboard": "^2.0.6",
     "jquery": "^3.4.1",
     "videojs-contrib-hls": "^5.15.0"
   }
